--- a/style.css
+++ b/style.css
@@ -15,7 +15,10 @@ body {
     border-bottom: solid black 1px;
     gap: 10px;
     align-items: center;
-
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 1;
 }
 .navbar__sec1__tittle{
     color: #A435F0
@@ -29,11 +32,13 @@ body {
     display: flex;  
     gap: 10px;
     align-items: center;
+    
 }
 .navbar__sec2 input{
     border: none;
     font-size: 16px;
     width: 100%;
+    background-color: transparent;
 }
 .navbar__sec2 input:focus{
     outline: none;
@@ -43,6 +48,23 @@ body {
     display: flex;
     gap: 10px;
     align-items: center;
+}
+.mylearning{
+    position: relative;
+    cursor: pointer;
+}
+.mylearning__popup{
+    position: absolute;
+    background-color: white;
+    border: solid black 1px;
+    width: 100px;
+    top: 150%;
+    right: 0;
+    padding: 20px;
+    display: none;
+}
+.mylearning:hover .mylearning__popup{
+    display: block;
 }
 
 .catagories{
@@ -58,9 +80,21 @@ body {
     padding: 10px;
 
 }
+.sales__image{
+    position: relative;
+}
 
 .sales__image img{
-    width: 1520px;   
+    width: 100%;   
+}
+.sales__image__offer{
+    width: 35%;
+    border: solid black 2px;
+    background-color: white;
+    padding: 2%;
+    position: absolute;
+    top: 10%;
+    left: 10%;
 }
 
 .course__card img{
@@ -101,7 +135,7 @@ body {
 .popular__container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start; 
+    justify-content: space-between; 
     gap: 20px;
     margin-top: 10px;
 }
