--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ body {
     padding: 10px;
     justify-content: space-around;
     border-bottom: solid black 1px ;  
-}
+} 
 .catagories p{
     background-color: #A435F0;
     color: white;
@@ -125,9 +125,11 @@ body {
 
 .course__card img{
     width: 100%;
-    height: 50%;
+    height: 70%;
+    border-radius: 8px;
     
 }
+
 .recomended__container{
     display: flex; 
     flex-wrap: wrap;
@@ -137,10 +139,26 @@ body {
 .course__card {
     flex-grow: 1;
     flex-basis: 20%;
-    margin: 5px;
+    margin: 10px;
+    cursor: pointer;
+    object-fit: cover;
+    background: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 17px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+    
     /* width: 250px;
     margin-bottom: 20px; */
 }
+/* .course__card {
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 17px;
+    background: #fff;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+    margin: 12px;
+} */
 
 .topics{
     padding: 10px;
@@ -171,6 +189,7 @@ body {
 
 
 .footer{
+    margin-top: 20px;
     padding: 30px;
     background-color: black;
     color: white;
@@ -195,6 +214,13 @@ body {
     body{
         font-size: 10px;
     }
+     .course__card {
+        flex-basis: 40%;
+    }
+    .sales__image__offer{
+        top: 1%;
+        left: 0;
+    }
 
 }
 @media screen and (max-width:600px){
@@ -211,7 +237,7 @@ body {
         display: block;
     }
     .sales__image__offer{
-        top: 2%;
+        top: 1%;
         left: 0;
     }
 }
